--- a/src/lib/assets/i18n/lv.json
+++ b/src/lib/assets/i18n/lv.json
@@ -168,7 +168,7 @@
 			"sl": "Slovenščina",
 			"sv": "Svenska"
 		},
-		"logo_subtitle": "",
+		"logo_subtitle": "privacy impact assessment",
 		"logo_title": "Ietekmes uz privātumu novērtējums",
 		"structures": "PIA formas",
 		"tools": {
@@ -228,7 +228,7 @@
 			"creation_status": "Izveidošana",
 			"date": "Datums",
 			"evaluation": "Pārskatīšana",
-			"guest": "",
+			"guest": "TO TRANSLATE - Guest(s)",
 			"import_pia": "Importēt PIA",
 			"import_structure": "Importēt veidni",
 			"item": {
@@ -249,25 +249,25 @@
 				"validate_pia": "Validēt"
 			},
 			"knowledges": {
-				"edit": "",
-				"import": "",
-				"new": "",
-				"placeholder_author": "",
-				"placeholder_contributors": "",
-				"placeholder_entry_number": "",
-				"placeholder_name": ""
+				"edit": "TO TRANSLATE - Edit the base",
+				"import": "TO TRANSLATE - Import a base",
+				"new": "TO TRANSLATE - Create a base",
+				"placeholder_author": "TO TRANSLATE - Author",
+				"placeholder_contributors": "TO TRANSLATE - Contributors",
+				"placeholder_entry_number": "TO TRANSLATE - Number of entries",
+				"placeholder_name": "TO TRANSLATE - Base's name"
 			},
 			"knowledges_entry": {
-				"all_sections": "",
-				"choose_category": "",
-				"contents": "",
-				"create": "",
-				"linked_to": "",
-				"new": "",
-				"placeholder_category": "",
-				"placeholder_description": "",
-				"placeholder_name": "",
-				"placeholder_updated_at": ""
+				"all_sections": "TO TRANSLATE - All sections",
+				"choose_category": "TO TRANSLATE - Choose a category",
+				"contents": "TO TRANSLATE - Contents",
+				"create": "TO TRANSLATE - Create this element",
+				"linked_to": "TO TRANSLATE - Linked to",
+				"new": "TO TRANSLATE - Create an element",
+				"placeholder_category": "TO TRANSLATE - Category",
+				"placeholder_description": "TO TRANSLATE - Your description here...",
+				"placeholder_name": "TO TRANSLATE - Element's name",
+				"placeholder_updated_at": "TO TRANSLATE - Last updated"
 			},
 			"new_pia": "Jauns PIA",
 			"new_structure": "Jauna veidne",
@@ -276,10 +276,10 @@
 			"placeholder_author": "Vārds, uzvārds",
 			"placeholder_category": "Kategorija",
 			"placeholder_evaluation": "Vārds, uzvārds",
-			"placeholder_import_knowledgeBase": "",
+			"placeholder_import_knowledgeBase": "TO TRANSLATE - Import base",
 			"placeholder_import_pia": "Importēt PIA",
 			"placeholder_import_structure": "Importēt veidni",
-			"placeholder_new_knowledgeBase": "",
+			"placeholder_new_knowledgeBase": "TO TRANSLATE - New base",
 			"placeholder_new_pia": "Jauns PIA",
 			"placeholder_new_structure": "Jauna veidne",
 			"placeholder_pia_name": "PIA nosaukums",
@@ -360,8 +360,8 @@
 			"organizational_measure": "Organizatoriskā kontrole",
 			"principle": "Princips"
 		},
-		"choose_knowledge_base": "",
-		"default_knowledge_base": "",
+		"choose_knowledge_base": "TO TRANSLATE - Choose your knowledge base",
+		"default_knowledge_base": "TO TRANSLATE - CNIL's knowledge base",
 		"filters": {
 			"all": "Visi",
 			"definitions": "Definīcijas",
@@ -976,12 +976,12 @@
 			"content": "The imported file doesn't correspond to a PIA template file."
 		},
 		"knowledge": {
-			"content": "",
-			"remove": ""
+			"content": "TO TRANSLATE - Are you sure you want to delete this element?",
+			"remove": "TO TRANSLATE - Delete this element"
 		},
 		"knowledges": {
-			"content": "",
-			"remove": ""
+			"content": "TO TRANSLATE - Are you sure you want to delete this knowledge base?",
+			"remove": "TO TRANSLATE - Delete this knowledge base"
 		},
 		"modal_select_text_pia": {
 			"content": "The content of the PIA has been copied to clipboard."
@@ -1044,8 +1044,8 @@
 		},
 		"users": {
 			"delete": {
-				"confirm": "",
-				"content": ""
+				"confirm": "TO TRANSLATE - Remove user",
+				"content": "TO TRANSLATE - Are you sure you want to delete this user?"
 			}
 		},
 		"validate_evaluation": {
@@ -1058,91 +1058,91 @@
 	"onboarding": {
 		"dashboard": {
 			"step1": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - Click on the <strong>+</strong> to create your first PIA.",
+				"title": "TO TRANSLATE - Create a PIA"
 			},
 			"step2": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - <p><strong>Editors</strong> write the first version of the analysis.</p><p>They are, for example, the project managers associated with the data processing.</p>",
+				"title": "TO TRANSLATE - PIA's roles"
 			},
 			"step3": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - <p><strong>Reviewers</strong> are involved in a second phase.</p><p>They use their legal or technical expertise to check the quality and compliance of the processing.</p><p>They are, for example, DPO, legal experts, ...</p>",
+				"title": "TO TRANSLATE - PIA's roles"
 			},
 			"step4": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - <p>The <strong>validator</strong> accepts or rejects the implementation of the processing. He must sign the analysis.</p><p>He is the controller, e.g. the CEO.</p>",
+				"title": "TO TRANSLATE - PIA's roles"
 			},
 			"step5": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - <p><strong>Templates</strong> are an advanced feature. They are used to create a pre-filled basis for the analysis.</p><p>You can create templates by going to the associated section accessible from the top menu.</p>",
+				"title": "TO TRANSLATE - Templates"
 			}
 		},
 		"entry": {
 			"step1": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - To move from one part of the analysis to another, use the left navigation menu.",
+				"title": "TO TRANSLATE - Browse"
 			},
 			"step2": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - This is used to explain the purpose of the processing and how it will be implemented.",
+				"title": "TO TRANSLATE - Context"
 			},
 			"step3": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - These aim to ensure that the processing complies with the GDPR.",
+				"title": "TO TRANSLATE - Fundamental principles"
 			},
 			"step4": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - These describe the security measures already planned for the processing operation and make it possible to assess its potential impact on the data subjects.",
+				"title": "TO TRANSLATE - Risks"
 			},
 			"step5": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - This allows the DPO to express her opinion on the implementation of the processing and the controller to accept or refuse it.",
+				"title": "TO TRANSLATE - Validation"
 			},
 			"step6": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - <p>It provides contextual assistance in carrying out the analysis and is based on the GDPR, the security guide and the CNIL's PIA guides</p><p>In addition to these contents, you can also create your own knowledge bases to easily access information specific to your organization.</p>",
+				"title": "TO TRANSLATE - The knowledge base"
 			},
 			"step7": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - At any time during the analysis, you can download the analysis in various formats to share it with your colleagues.",
+				"title": "TO TRANSLATE - Export your PIA"
 			}
 		},
 		"evaluation": {
 			"step1": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - The evaluation can take an entire section into account, or at the level of each element of a section.",
+				"title": "TO TRANSLATE - Evaluate the PIA"
 			},
 			"step2": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - <p>This evaluation indicates to the editors that elements are missing in order to make a relevant assessment.</p><p>The assessor must indicate these in the associated <strong>evaluation comment</strong> field. The editor will make the necessary corrections.</p>",
+				"title": "TO TRANSLATE - To correct"
 			},
 			"step3": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - <p>This assessment indicates the processing elements to be revised. They are detailed in the <strong>action plan / corrective action</strong> field.</p><p>These measures will be automatically added to the action plan part of the analysis. It is necessary to implement them as soon as possible.</p>",
+				"title": "TO TRANSLATE - Improvable"
 			},
 			"step4": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - This assessment means that this part of the processing can be implemented without modification.",
+				"title": "TO TRANSLATE - Acceptable"
 			},
 			"step5": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - If the assessment of a section has not yet begun, the request forassessment may be cancelled to make changes to the processing description.",
+				"title": "TO TRANSLATE - Cancel a request"
 			}
 		},
 		"general": {
-			"done": "",
-			"next": "",
-			"skip": ""
+			"done": "TO TRANSLATE - Confirm",
+			"next": "TO TRANSLATE - Next",
+			"skip": "TO TRANSLATE - Skip"
 		},
 		"validated": {
 			"step1": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - A complete and validated analysis can be consulted at any time via a dedicated interface.",
+				"title": "TO TRANSLATE - Consult a validated PIA"
 			},
 			"step2": {
-				"description": "",
-				"title": ""
+				"description": "TO TRANSLATE - It is necessary to review regularly an analysis. You can edit or duplicate it at any time to review its content according to the processing evolution.",
+				"title": "TO TRANSLATE - Update a validated PIA"
 			}
 		}
 	},
