feat(i18n): added Bulgarian

--- a/src/lib/assets/i18n/hu.json
+++ b/src/lib/assets/i18n/hu.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Tudásbázis",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "A CNIL által biztosított fordítások",
 			"community_translations": "Nem hivatalos fordítások",
 			"cz": "Česky",
