--- a/src/lib/assets/i18n/lt.json
+++ b/src/lib/assets/i18n/lt.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Pagalba",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "CNIL vertimas",
 			"community_translations": "Bendruomenės pasiūlytas vertimas",
 			"cz": "Česky",
