--- a/src/lib/assets/i18n/lv.json
+++ b/src/lib/assets/i18n/lv.json
@@ -142,6 +142,7 @@
 		"homepage_link": "Mani PIA",
 		"knowledge_base_link": "Zināšanu bāze",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "CNIL nodrošinātie tulkojumi",
 			"community_translations": "Kopienas nodrošinātie tulkojumi",
 			"cz": "Česky",
