--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -142,11 +142,12 @@
 		"homepage_link": "Моите ОВЗД",
 		"knowledge_base_link": "База знания",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Предоставени от CNIL преводи",
 			"community_translations": "Преводи предоставени от общността",
-			"cz": "Чешки",
-			"de": "Немски",
-			"dk": "Датски",
+			"cz": "Česky",
+			"de": "Deutsch",
+			"dk": "Dansk",
 			"dpa_translations": "Преводи, ревизирани от европейския надзорен орган по защита на данните",
 			"el": "Ελληνικά",
 			"en": "English",
