--- a/src/lib/assets/i18n/cz.json
+++ b/src/lib/assets/i18n/cz.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Znalostní báze",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "TO BE TRANSLATED - CNIL provided translations",
 			"community_translations": "TO BE TRANSLATED - Community provided translations",
 			"cz": "Česky",
