--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Wissensbasis",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Von der CNIL bereitgestellte Übersetzungen",
 			"community_translations": "Von der Community bereitgestellte Übersetzungen",
 			"cz": "Česky",
