--- a/src/lib/assets/i18n/dk.json
+++ b/src/lib/assets/i18n/dk.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Vidensbase",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Oversættelser af CNILs",
 			"community_translations": "Community oversættelser",
 			"cz": "Česky",
