--- a/src/lib/assets/i18n/el.json
+++ b/src/lib/assets/i18n/el.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Βάση γνώσεων",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Μεταφράσεις που παρείχε η CNIL",
 			"community_translations": "Μεταφράσεις που παρείχε η κοινότητα",
 			"cz": "Česky",
