--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -142,6 +142,7 @@
 		"homepage_link": "My PIAs",
 		"knowledge_base_link": "Knowledge base",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "CNIL provided translations",
 			"community_translations": "Community provided translations",
 			"cz": "Česky",
