--- a/src/lib/assets/i18n/es.json
+++ b/src/lib/assets/i18n/es.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Base de conocimientos",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Traducciones del CNIL",
 			"community_translations": "Traducciones de la comunidad",
 			"cz": "Česky",
