--- a/src/lib/assets/i18n/fi.json
+++ b/src/lib/assets/i18n/fi.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Tietopankki",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "CNIL:n tarjoamat käännökset",
 			"community_translations": "Epäviralliset käännökset",
 			"cz": "Česky",
