--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -142,6 +142,7 @@
 		"homepage_link": "Mes PIAs",
 		"knowledge_base_link": "Base de connaissances",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Traductions fournies par la CNIL",
 			"community_translations": "Traductions fournies par la communauté",
 			"cz": "Česky",
