--- a/src/lib/assets/i18n/nl.json
+++ b/src/lib/assets/i18n/nl.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Kennisbank",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Vertalingen door de CNIL",
 			"community_translations": "Vertalingen door de community",
 			"cz": "Česky",
