--- a/src/lib/assets/i18n/pt.json
+++ b/src/lib/assets/i18n/pt.json
@@ -142,6 +142,7 @@
 		"homepage_link": "Painel",
 		"knowledge_base_link": "Base de conhecimento",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Traduções fornecidas pela CNIL",
 			"community_translations": "Traduções fornecidas pela comunidade",
 			"cz": "Česky",
