--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -142,6 +142,7 @@
 		"homepage_link": "TO TRANSLATE - My PIAs",
 		"knowledge_base_link": "Baza de cunoaștere",
 		"languages": {
+			"bg": "български",
 			"cnil_translations": "Traduceri oferite de către CNIL",
 			"community_translations": "Traduceri oferite de către Comunitate",
 			"cz": "Česky",
